# bus-system

./: .gitignore  Dockerfile  README.md  REFERENCES.md  TASK.md  docker-compose.yml  init-mongo.js  output.csv  requirements.txt  sample.json
.github/: CODEOWNERS  reviewers.yml  (+3 more)
backend/: .dockerignore  Cargo.toml  Dockerfile  configuration.yaml
backend/configuration/: base.yaml  local.yaml  production.yaml
backend/prediction/: .dockerignore  Dockerfile  anaconda_requirement  app.py  data_transform.py  lstm.py  lstm2.py  random_forest.py  run_model.py  xg_boost.py
backend/prediction/model/LSTM_2_model_saved_model/: keras_metadata.pb  saved_model.pb
backend/prediction/model/LSTM_2_model_saved_model/variables/: variables.data-00000-of-00001  variables.index
backend/prediction/model/Random_forest_saved_model_2/: model_file.p
backend/prediction/model/XGBoost_saved_model/: xgboost_model.model  xgboost_model.pkl
backend/prediction/testing/: compare.py  data.py  model_GUI.py  request.py
backend/prediction_model_lstm/: .dockerignore  Dockerfile  GUI.py  anaconda requirement  app.py  build_ML_model.py  data_transform.py  jsontodf.py  load_and_clean_data.py  load_and_test_ML.py  model_GUI.py  request.py  run_model.py  user_input.py
backend/prediction_model_lstm/testing/: data.py  model_GUI.py  request.py
backend/prediction_model_random_forest/: app.py  data_cleaning.ipynb  load_and_test_model.py  load_model.py  request.py  user_input.py
backend/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
backend/src/api/: bus.rs  bus_line.rs  bus_stop.rs  health_check.rs  mod.rs  predict.rs  sample.rs  segments.rs
backend/src/models/: bus_line.rs  bus_stop.rs  mod.rs  predict.rs  route_info.rs  segment.rs
backend/streaming/: Dockerfile  cronjob  data_streaming.py  requirements.txt
backend/tests/: bus_lines.rs  bus_stops.rs  buses.rs  health_check.rs  predict.rs  segment.rs
(+181 files in other folders)
