[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4.30"
serde = { version = "1", features = ["derive"] }
futures = "0.3.28"


[dependencies.mongodb]
version = "2.6.1"
default-features = false
features = ["async-std-runtime"] 