[package]
name = "gmanbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gmanbus"

[dependencies]
actix-web = "4"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4.30"
serde = { version = "1", features = ["derive"] }
futures = "0.3.28"
tokio = "1.32.0"
mongodb = "2.6.1"
config = "0.13.3"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.6"
actix-cors = "0.6.4"
reqwest ={ version = "0.11.20", features = ["json"]}
serde_json = "1.0.107"
lazy_static = "1.4.0"
